--- a/web/src/locales/ru/data.json
+++ b/web/src/locales/ru/data.json
@@ -1,5 +1,6 @@
 {
   "account": {
+    "or": "или",
     "Logout": "Выход",
     "My Account": "Мой аккаунт",
     "Sign Up": "Зарегистрироваться"
@@ -457,7 +458,7 @@
     "unsynced": "unsynced"
   },
   "login": {
-    "Auto sign in": "Автоматическая авторизация",
+    "Auto sign in": "Запомнить",
     "Back button": "Back button",
     "Continue with": "Продолжайте с",
     "Email": "Email",
@@ -497,6 +498,7 @@
     "Sign in with Face ID": "Sign in with Face ID",
     "Sign in with WebAuthn": "Войти с помощью WebAuthn",
     "Sign in with {type}": "Войти с помощью {type}",
+    "Sign up with {type}": "Войти с помощью {type}",
     "Signing in...": "Вход в систему...",
     "Successfully logged in with WebAuthn credentials": "Успешный вход с учетными данными WebAuthn",
     "The camera is currently in use by another webpage": "The camera is currently in use by another webpage",
