feat: auto redirect, sign in, sign up tabs

--- a/web/src/locales/ar/data.json
+++ b/web/src/locales/ar/data.json
@@ -1,6 +1,7 @@
 {
   "account": {
     "Logout": "Logout",
+    "or": "Or connect with:",
     "My Account": "My Account",
     "Sign Up": "Sign Up"
   },
