--- a/web/src/locales/en/data.json
+++ b/web/src/locales/en/data.json
@@ -1,6 +1,6 @@
 {
   "account": {
-    "or": "or",
+    "or": "Or connect with",
     "Logout": "Logout",
     "My Account": "My Account",
     "Sign Up": "Sign Up"
