--- a/web/src/locales/ru/data.json
+++ b/web/src/locales/ru/data.json
@@ -1,6 +1,6 @@
 {
   "account": {
-    "or": "или",
+    "or": "Или подключиться с:",
     "Logout": "Выход",
     "My Account": "Мой аккаунт",
     "Sign Up": "Зарегистрироваться"
