--- a/web/src/locales/he/data.json
+++ b/web/src/locales/he/data.json
@@ -152,6 +152,7 @@
   "code": {
     "Code you received": "Code you received",
     "Email code": "Email code",
+    "Confirmation code": "Confirmation code",
     "Empty code": "Empty code",
     "Enter your code": "Enter your code",
     "Phone code": "Phone code",
@@ -955,7 +956,7 @@
   "signup": {
     "Accept": "Accept",
     "Agreement": "Agreement",
-    "Confirm": "Confirm",
+    "Confirm": "Confirm password",
     "Decline": "Decline",
     "Have account?": "Have account?",
     "Label": "Label",
@@ -996,7 +997,7 @@
     "Username - Tooltip": "Username - Tooltip",
     "Your account has been created!": "Your account has been created!",
     "Your confirmed password is inconsistent with the password!": "Your confirmed password is inconsistent with the password!",
-    "sign in now": "sign in now"
+    "sign in now": "Sign In"
   },
   "subscription": {
     "Active": "Active",
