--- a/web/src/locales/de/data.json
+++ b/web/src/locales/de/data.json
@@ -1197,6 +1197,11 @@
     "The password must have at least 8 characters": "The password must have at least 8 characters",
     "The password must not contain any repeated characters": "The password must not contain any repeated characters",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "Mindestens ein Sonderzeichen",
+    "At least one uppercase letter, one lowercase letter and one digit": "Mindestens ein Großbuchstabe, ein Kleinbuchstabe und eine Ziffer",
+    "At least 6 characters": "Mindestens 6 Zeichen",
+    "At least 8 characters": "Mindestens 8 Zeichen",
+    "Not contain any repeated characters": "Darf keine wiederholten Zeichen enthalten",
     "Title": "Titel",
     "Title - Tooltip": "Position in der Zugehörigkeit",
     "Two passwords you typed do not match.": "Zwei von Ihnen eingegebene Passwörter stimmen nicht überein.",
