--- a/web/src/locales/es/data.json
+++ b/web/src/locales/es/data.json
@@ -1197,6 +1197,12 @@
     "The password must have at least 8 characters": "The password must have at least 8 characters",
     "The password must not contain any repeated characters": "The password must not contain any repeated characters",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "Al menos un carácter especial",
+    "At least one uppercase letter, one lowercase letter and one digit": "Al menos una letra mayúscula, una letra minúscula y un dígito",
+    "At least 6 characters": "Al menos 6 caracteres",
+    "At least 8 characters": "Al menos 8 caracteres",
+    "Not contain any repeated characters": "No debe contener caracteres repetidos",
+    "Password requirements": "Regulaciones de contraseñas",
     "Title": "Título",
     "Title - Tooltip": "Posición en la afiliación",
     "Two passwords you typed do not match.": "Dos contraseñas que has escrito no coinciden.",
