--- a/web/src/locales/id/data.json
+++ b/web/src/locales/id/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "The password must have at least 8 characters",
     "The password must not contain any repeated characters": "The password must not contain any repeated characters",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "Setidaknya satu karakter khusus",
+    "At least one uppercase letter, one lowercase letter and one digit": "Setidaknya satu huruf kapital, satu huruf kecil, dan satu angka",
+    "At least 6 characters": "Setidaknya 6 karakter",
+    "At least 8 characters": "Setidaknya 8 karakter",
+    "Not contain any repeated characters": "Tidak boleh mengandung karakter yang diulang",
     "Title": "Judul",
     "Title - Tooltip": "Posisi dalam afiliasi",
     "Two passwords you typed do not match.": "Dua password yang Anda ketikkan tidak cocok.",
