--- a/web/src/locales/ja/data.json
+++ b/web/src/locales/ja/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "The password must have at least 8 characters",
     "The password must not contain any repeated characters": "The password must not contain any repeated characters",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "少なくとも1つの特殊文字",
+    "At least one uppercase letter, one lowercase letter and one digit": "少なくとも1つの大文字、1つの小文字、1つの数字",
+    "At least 6 characters": "少なくとも6文字",
+    "At least 8 characters": "少なくとも8文字",
+    "Not contain any repeated characters": "繰り返しの文字を含まない",
     "Title": "タイトル",
     "Title - Tooltip": "所属のポジション",
     "Two passwords you typed do not match.": "2つのパスワードが一致しません。",
