--- a/web/src/locales/ru/data.json
+++ b/web/src/locales/ru/data.json
@@ -1198,6 +1198,12 @@
     "The password must have at least 8 characters": "Пароль должен быть минимум 8 символов",
     "The password must not contain any repeated characters": "Пароль не должен содержать повторяющиеся символы",
     "This field value doesn't match the pattern rule": "Значение поля не соответствует шаблону",
+    "At least one special character": "Хотя бы один специальный символ",
+    "At least one uppercase letter, one lowercase letter and one digit": "Хотя бы одна заглавная буква, одна строчная буква и одна цифра",
+    "At least 6 characters": "Не менее 6 символов",
+    "At least 8 characters": "Не менее 8 символов",
+    "Password requirements": "Требования к паролю",
+    "Not contain any repeated characters": "Не должен содержать повторяющиеся символы",
     "Title": "Заголовок",
     "Title - Tooltip": "Положение в аффилиации",
     "Two passwords you typed do not match.": "Два введенных вами пароля не совпадают.",
