--- a/web/src/locales/sk/data.json
+++ b/web/src/locales/sk/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "Heslo musí mať aspoň 8 znakov",
     "The password must not contain any repeated characters": "Heslo nesmie obsahovať žiadne opakované znaky",
     "This field value doesn't match the pattern rule": "Hodnota v tomto poli nevyhovuje pravidlu vzoru",
+    "At least one special character": "Aspoň jeden špeciálny znak",
+    "At least one uppercase letter, one lowercase letter and one digit": "Aspoň jedno veľké písmeno, jedno malé písmeno a jedna číslica",
+    "At least 6 characters": "Aspoň 6 znakov",
+    "At least 8 characters": "Aspoň 8 znakov",
+    "Not contain any repeated characters": "Nesmie obsahovať žiadne opakujúce sa znaky",
     "Title": "Titul",
     "Title - Tooltip": "Pozícia v pripojení",
     "Two passwords you typed do not match.": "Dve zadané heslá sa nezhodujú.",
