--- a/web/src/locales/uk/data.json
+++ b/web/src/locales/uk/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "Пароль повинен містити не менше 8 символів",
     "The password must not contain any repeated characters": "Пароль не повинен містити повторюваних символів",
     "This field value doesn't match the pattern rule": "Це значення поля не відповідає правилу шаблону",
+    "At least one special character": "Принаймні один спеціальний символ",
+    "At least one uppercase letter, one lowercase letter and one digit": "Принаймні одна велика літера, одна мала літера і одна цифра",
+    "At least 6 characters": "Принаймні 6 символів",
+    "At least 8 characters": "Принаймні 8 символів",
+    "Not contain any repeated characters": "Не повинен містити повторювані символи",
     "Title": "Назва",
     "Title - Tooltip": "Посада в афіліації",
     "Two passwords you typed do not match.": "Два паролі, які ви ввели, не збігаються.",
