--- a/web/src/locales/vi/data.json
+++ b/web/src/locales/vi/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "The password must have at least 8 characters",
     "The password must not contain any repeated characters": "The password must not contain any repeated characters",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "Ít nhất một ký tự đặc biệt",
+    "At least one uppercase letter, one lowercase letter and one digit": "Ít nhất một chữ cái viết hoa, một chữ cái viết thường và một chữ số",
+    "At least 6 characters": "Ít nhất 6 ký tự",
+    "At least 8 characters": "Ít nhất 8 ký tự",
+    "Not contain any repeated characters": "Không được chứa ký tự lặp lại",
     "Title": "Tiêu đề",
     "Title - Tooltip": "Vị trí trong tổ chức",
     "Two passwords you typed do not match.": "Hai mật khẩu mà bạn đã nhập không khớp.",
