--- a/web/src/locales/fr/data.json
+++ b/web/src/locales/fr/data.json
@@ -1197,6 +1197,12 @@
     "The password must have at least 8 characters": "Le mot de passe doit contenir moins 8 caractères",
     "The password must not contain any repeated characters": "Le mot de passe ne doit pas contenir de caractères répétés",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "Au moins un caractère spécial",
+    "At least one uppercase letter, one lowercase letter and one digit": "Au moins une lettre majuscule, une lettre minuscule et un chiffre",
+    "At least 6 characters": "Au moins 6 caractères",
+    "At least 8 characters": "Au moins 8 caractères",
+    "Not contain any repeated characters": "Ne doit pas contenir de caractères répétés",
+    "Password requirements": "Règlement sur les mots de passe",
     "Title": "Poste",
     "Title - Tooltip": "Fonction dans l'affiliation",
     "Two passwords you typed do not match.": "Le mot de passe et la confirmation du mot de passe ne correspondent pas.",
