--- a/web/src/locales/ko/data.json
+++ b/web/src/locales/ko/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "The password must have at least 8 characters",
     "The password must not contain any repeated characters": "The password must not contain any repeated characters",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "특수 문자가 하나 이상 필요합니다.",
+    "At least one uppercase letter, one lowercase letter and one digit": "대문자, 소문자 및 숫자가 각각 하나 이상 필요합니다.",
+    "At least 6 characters": "최소 6자 이상이어야 합니다.",
+    "At least 8 characters": "최소 8자 이상이어야 합니다.",
+    "Not contain any repeated characters": "반복된 문자를 포함할 수 없습니다.",
     "Title": "제목",
     "Title - Tooltip": "소속 내 직위",
     "Two passwords you typed do not match.": "두 개의 비밀번호가 일치하지 않습니다.",
