--- a/web/src/locales/pl/data.json
+++ b/web/src/locales/pl/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "The password must have at least 8 characters",
     "The password must not contain any repeated characters": "The password must not contain any repeated characters",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "At least one special character",
+    "At least one uppercase letter, one lowercase letter and one digit": "At least one uppercase letter, one lowercase letter and one digit",
+    "At least 6 characters": "At least 6 characters",
+    "At least 8 characters": "At least 8 characters",
+    "Not contain any repeated characters": "Not contain any repeated characters",
     "Title": "Title",
     "Title - Tooltip": "Position in the affiliation",
     "Two passwords you typed do not match.": "Two passwords you typed do not match.",
