--- a/web/src/locales/pt/data.json
+++ b/web/src/locales/pt/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "The password must have at least 8 characters",
     "The password must not contain any repeated characters": "The password must not contain any repeated characters",
     "This field value doesn't match the pattern rule": "This field value doesn't match the pattern rule",
+    "At least one special character": "Pelo menos um caractere especial",
+    "At least one uppercase letter, one lowercase letter and one digit": "Pelo menos uma letra maiúscula, uma letra minúscula e um dígito",
+    "At least 6 characters": "Pelo menos 6 caracteres",
+    "At least 8 characters": "Pelo menos 8 caracteres",
+    "Not contain any repeated characters": "Não deve conter caracteres repetidos",
     "Title": "Título",
     "Title - Tooltip": "Cargo na afiliação",
     "Two passwords you typed do not match.": "As duas senhas digitadas não coincidem.",
