--- a/web/src/locales/zh/data.json
+++ b/web/src/locales/zh/data.json
@@ -1196,6 +1196,11 @@
     "The password must have at least 8 characters": "密码长度必须至少为8个字符",
     "The password must not contain any repeated characters": "密码不得包含任何重复字符",
     "This field value doesn't match the pattern rule": "此字段值与模式规则不匹配",
+    "At least one special character": "至少一个特殊字符",
+    "At least one uppercase letter, one lowercase letter and one digit": "至少一个大写字母、一个小写字母和一个数字",
+    "At least 6 characters": "至少6个字符",
+    "At least 8 characters": "至少8个字符",
+    "Not contain any repeated characters": "不能包含任何重复字符",
     "Title": "职务",
     "Title - Tooltip": "在工作单位担任的职务",
     "Two passwords you typed do not match.": "两次输入的密码不匹配。",
