fix: password requirements layout and confirmation code label i18n

--- a/web/src/locales/fr/data.json
+++ b/web/src/locales/fr/data.json
@@ -153,7 +153,7 @@
   "code": {
     "Code you received": "Le code que vous avez reçu",
     "Email code": "Code de vérification de l'adresse e-mail",
-    "Confirmation code": "Code de confirmation",
+    "Confirmation code": "Code de Confirmation",
     "Empty code": "Code vide",
     "Enter your code": "Entrez votre code",
     "Phone code": "Code de vérification du numéro de téléphone",
