--- a/web/src/locales/id/data.json
+++ b/web/src/locales/id/data.json
@@ -152,7 +152,7 @@
   "code": {
     "Code you received": "Kode yang kamu terima",
     "Email code": "Kode email",
-    "Confirmation code": "Kode konfirmasi",
+    "Confirmation code": "Kode Konfirmasi",
     "Empty code": "Kode kosong",
     "Enter your code": "Masukkan kode Anda",
     "Phone code": "Kode telepon",
