--- a/web/src/locales/sk/data.json
+++ b/web/src/locales/sk/data.json
@@ -152,7 +152,7 @@
   "code": {
     "Code you received": "Kód, ktorý ste dostali",
     "Email code": "Emailový kód",
-    "Confirmation code": "Potvrdzovací kód",
+    "Confirmation code": "Potvrdzovací Kód",
     "Empty code": "Prázdny kód",
     "Enter your code": "Zadajte svoj kód",
     "Phone code": "Telefónny kód",
