--- a/web/src/locales/es/data.json
+++ b/web/src/locales/es/data.json
@@ -153,7 +153,7 @@
   "code": {
     "Code you received": "Código que recibió",
     "Email code": "Código de correo electrónico",
-    "Confirmation code": "Código de confirmación",
+    "Confirmation code": "Código de Confirmación",
     "Empty code": "Código vacío",
     "Enter your code": "Ingresa tu código",
     "Phone code": "Código de teléfono",
