--- a/web/src/locales/kk/data.json
+++ b/web/src/locales/kk/data.json
@@ -152,7 +152,7 @@
   "code": {
     "Code you received": "Code you received",
     "Email code": "Email code",
-    "Confirmation code": "Confirmation code",
+    "Confirmation code": "Confirmation Code",
     "Empty code": "Empty code",
     "Enter your code": "Enter your code",
     "Phone code": "Phone code",
