fix: login/signup autocomlete form items & translation

--- a/web/src/locales/ar/data.json
+++ b/web/src/locales/ar/data.json
@@ -957,7 +957,7 @@
   "signup": {
     "Accept": "Accept",
     "Agreement": "Agreement",
-    "Confirm": "Confirm password",
+    "Confirm": "Confirm Password",
     "Decline": "Decline",
     "Have account?": "Already have an account?",
     "Label": "Label",
