--- a/web/src/locales/en/data.json
+++ b/web/src/locales/en/data.json
@@ -965,7 +965,7 @@
   "signup": {
     "Accept": "Accept",
     "Agreement": "Agreement",
-    "Confirm": "Confirm password",
+    "Confirm": "Confirm Password",
     "Decline": "Decline",
     "Have account?": "Already have an account?",
     "Label": "Label",
