--- a/web/src/locales/ms/data.json
+++ b/web/src/locales/ms/data.json
@@ -956,7 +956,7 @@
   "signup": {
     "Accept": "Accept",
     "Agreement": "Agreement",
-    "Confirm": "Confirm password",
+    "Confirm": "Confirm Password",
     "Decline": "Decline",
     "Have account?": "Have account?",
     "Label": "Label",
